--- a/index.html
+++ b/index.html
@@ -167,6 +167,80 @@ a, a:hover, a:focus {
     button:hover{transform:translateY(-3px)}
 
     footer{text-align:center;color:var(--muted);padding:40px 0}
+    /* Mobile Responsive Styles */
+@media (max-width: 768px) {
+  .container { padding: 16px; }
+  
+  .nav { 
+    flex-direction: column; 
+    gap: 16px; 
+    text-align: center; 
+  }
+  
+  .brand { 
+    display: flex; 
+    align-items: center; 
+    gap: 12px; 
+  }
+  
+  nav ul { 
+    flex-wrap: wrap; 
+    justify-content: center; 
+    gap: 16px; 
+  }
+  
+  .grid { 
+    grid-template-columns: 1fr; 
+    gap: 20px; 
+  }
+  
+  h1 { font-size: 28px; }
+  
+  .card { padding: 20px; }
+  
+  .hero { 
+    display: flex; 
+    flex-direction: column; 
+    gap: 20px; 
+  }
+  
+  aside { order: -1; }
+  
+  #contact { padding: 24px; }
+  
+  footer div { 
+    flex-direction: column; 
+    text-align: center; 
+    gap: 8px; 
+  }
+}
+
+@media (max-width: 480px) {
+  .container { padding: 12px; }
+  
+  .nav { gap: 12px; }
+  
+  nav ul { gap: 12px; }
+  
+  nav a { font-size: 14px; }
+  
+  .cta { 
+    padding: 8px 16px; 
+    font-size: 14px; 
+  }
+  
+  h1 { font-size: 24px; }
+  
+  .card { padding: 16px; }
+  
+  .skill { 
+    padding: 6px 10px; 
+    font-size: 12px; 
+  }
+  
+  #contact { padding: 16px; }
+}
+
   </style>
 </head>
 <body>
@@ -402,4 +476,5 @@ a, a:hover, a:focus {
   </script>
 </body>
 </html>
+
 
