--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ a, a:hover, a:focus {
     #contact input,#contact textarea{
       background:rgba(255,255,255,0.07);
       border:1px solid rgba(255,255,255,0.18);
-      color:white;padding:14px;border-radius:12px;
+      color:rgb(0, 0, 0);padding:14px;border-radius:12px;
       transition:0.3s;
     }
     #contact input:focus,#contact textarea:focus{
@@ -298,7 +298,7 @@ a, a:hover, a:focus {
         <div style="margin-top:18px">
           <!-- View Resume Button -->
 <div style="margin:20px 0; text-align:center;">
-  <a href="https://drive.google.com/file/d/1JlQZdPEAdCm1WRekE0ulHbjosdvFEOhw/view?usp=drive_link" target="_blank" style="padding:12px 20px;background:#0b66f6;color:white;font-weight:600;border-radius:10px;text-decoration:none;box-shadow:0 4px 12px rgba(11,102,246,0.25);">View Resume</a>
+  <a href="https://drive.google.com/file/d/1rcn8r3UFob2uKNF2-AGz9FBtKPAxxGgC/view?usp=drive_link" target="_blank" style="padding:12px 20px;background:#0b66f6;color:white;font-weight:600;border-radius:10px;text-decoration:none;box-shadow:0 4px 12px rgba(11,102,246,0.25);">View Resume</a>
 </div>
 
 <div class="section-title"><h3 id="projects">Projects</h3></div>
@@ -445,12 +445,13 @@ a, a:hover, a:focus {
   <h2 style="color: #000;font-size:26px;font-weight:700;margin-bottom:8px">Contact Me</h2>
   <div style="width:60px;height:3px;background:#0b66f6;margin-bottom:22px"></div>
 
-  <form style="display:flex;flex-direction:column;gap:14px;max-width:600px">
-    <input type="text" placeholder="Your Name" style="padding:12px;border-radius:8px;border:1px solid #d1d5db;font-size:15px" required>
-    <input type="email" placeholder="Your Email" style="padding:12px;border-radius:8px;border:1px solid #d1d5db;font-size:15px" required>
-    <textarea placeholder="Your Message" rows="6" style="padding:12px;border-radius:8px;border:1px solid #d1d5db;font-size:15px" required></textarea>
-    <button type="submit" style="padding:12px 20px;background:#0b66f6;color:white;border:none;border-radius:8px;font-weight:600;font-size:15px;width:150px">Send Message</button>
-  </form>
+  <form id="contact-form" style="display:flex;flex-direction:column;gap:14px;max-width:600px">
+  <input type="text" name="name" placeholder="Your Name" style="padding:12px;border-radius:8px;border:1px solid #000000;font-size:15px" required>
+  <input type="email" name="email" placeholder="Your Email" style="padding:12px;border-radius:8px;border:1px solid #000000;font-size:15px" required>
+  <textarea name="message" placeholder="Your Message" rows="6" style="padding:12px;border-radius:8px;border:1px solid #000000;font-size:15px" required></textarea>
+  <button type="submit" style="padding:12px 20px;background:#0b66f6;color:white;border:none;border-radius:8px;font-weight:600;font-size:15px;width:150px">Send Message</button>
+</form>
+
 </section>
 
 <footer>
@@ -473,9 +474,36 @@ a, a:hover, a:focus {
         if(t) t.scrollIntoView({behavior:'smooth',block:'start'});
       })
     });
+    // Contact form handling
+document.getElementById('contact-form').addEventListener('submit', function(e) {
+  e.preventDefault();
+  
+  const formData = new FormData(this);
+  const name = formData.get('name');
+  const email = formData.get('email');
+  const message = formData.get('message');
+  
+  // Using Formspree (free service)
+  fetch('https://formspree.io/f/mzznyzrg', {
+    method: 'POST',
+    headers: {
+      'Accept': 'application/json'
+    },
+    body: formData
+  })
+  .then(response => {
+    if (response.ok) {
+      alert('Message sent successfully!');
+      this.reset();
+    } else {
+      alert('Error sending message. Please try again.');
+    }
+  })
+  .catch(error => {
+    alert('Error sending message. Please try again.');
+  });
+});
+
   </script>
 </body>
 </html>
-
-
-
