--- a/index.html
+++ b/index.html
@@ -218,10 +218,20 @@ a, a:hover, a:focus {
     justify-content: space-between;
     align-items: center;
   }
+  @media (max-width: 480px) {
+  .container { padding: 12px; }
+  
+  .nav { 
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+  }
   
   .cta { 
     padding: 6px 10px; 
-    font-size: 12px; 
+    font-size: 12px;
+    margin-right: 16px;
   }
   
   h1 { font-size: 24px; }
@@ -580,4 +590,5 @@ a, a:hover, a:focus {
 
 </body>
 </html>
+
 
