--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Professional Dark Mode Portfolio (Text + Links preserved exactly) -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -38,12 +37,12 @@
       backdrop-filter:blur(14px);
       background:rgba(255,255,255,0.06);
       border-bottom:1px solid rgba(255,255,255,0.15);
-      padding:16px 22px;
+      padding:4px 22px;
       position:sticky;top:0;z-index:50;
       box-shadow:0 8px 32px rgba(0,0,0,0.4);
     }
 
-    .container{max-width:var(--maxw);margin:auto;padding:24px}
+    .container{max-width:var(--maxw);margin:auto;padding:12px}
     .nav{display:flex;justify-content:space-between;align-items:center}
 
     .logo{
@@ -52,6 +51,17 @@
       display:grid;place-items:center;color:white;font-weight:800;
       box-shadow:0 0 25px rgba(255,78,189,0.7);
     }
+    .brand {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+/* Keep main content padding normal */
+main.container {
+  padding: 24px;
+}
+
 
     nav ul{display:flex;gap:22px;list-style:none}
     nav a{color:white;text-decoration:none;font-weight:600;transition:0.3s}
@@ -291,6 +301,27 @@ a, a:hover, a:focus {
   background: rgba(255,78,189,0.1);
   color: var(--accent2);
 }
+.desktop-nav {
+  display: flex;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 4px;
+}
+
+@media (max-width: 768px) {
+  .desktop-nav {
+    display: none;
+  }
+  
+  .hamburger {
+    display: flex;
+  }
+}
+
 
   </style>
 </head>
@@ -306,8 +337,19 @@ a, a:hover, a:focus {
       </div>
     </div>
     
-    <a class="cta" href="#contact">Contact</a>
+    <!-- Desktop Navigation -->
+    <nav class="desktop-nav">
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#certifications">Certifications</a></li>
+        <li><a class="cta" href="#contact">Contact</a></li>
+      </ul>
+    </nav>
     
+    <!-- Mobile Hamburger -->
     <div class="hamburger" onclick="toggleMenu()">
       <span></span>
       <span></span>
@@ -315,6 +357,7 @@ a, a:hover, a:focus {
     </div>
   </div>
   
+  <!-- Mobile Menu -->
   <nav class="mobile-menu">
     <ul>
       <li><a href="#about">About</a></li>
@@ -322,9 +365,11 @@ a, a:hover, a:focus {
       <li><a href="#projects">Projects</a></li>
       <li><a href="#experience">Experience</a></li>
       <li><a href="#certifications">Certifications</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 </header>
+
 
 
   <main class="container">
@@ -586,6 +631,7 @@ document.querySelectorAll('a[href^="#"]').forEach(a=>{
       alert('Failed to send message. Please try again.');
     }
   });
+  
 </script>
 
 
